fixed navbar z-index

--- a/src/app/sharedComponents/navbar/navbar.component.css
+++ b/src/app/sharedComponents/navbar/navbar.component.css
@@ -4,7 +4,7 @@
   border-bottom-color: #2985C4 !important;
   border-bottom-width: 3px !important;
   box-shadow: #2985C4 !important;
-  z-index: 1;
+  z-index: 1000;
 }
 
 .btn-link {
